--- a/01.Form-Validator/index.html
+++ b/01.Form-Validator/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Validator</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 </head>
 
 <body>
@@ -24,12 +25,20 @@
       </div>
       <div class="form-control">
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter password">
+        <div class="password-control">
+          <input type="password" id="password" placeholder="Enter password">
+          <div class="password-icon"><i class="fas fa-eye"></i></div>
+          <div class="password-icon hide"><i class="fas fa-eye-slash"></i></div>
+        </div>
         <small>Error message</small>
       </div>
       <div class="form-control">
         <label for="password2">Confirm Password</label>
-        <input type="password" id="password2" placeholder="Enter password again">
+        <div class="password-control">
+          <input type="password" id="password2" placeholder="Enter password again">
+          <div class="password-icon"><i class="fas fa-eye"></i></div>
+          <div class="password-icon hide"><i class="fas fa-eye-slash"></i></div>
+        </div>
         <small>Error message</small>
       </div>
       <button>Submit</button>
