--- a/02.Movie-Seat-Booking/index.html
+++ b/02.Movie-Seat-Booking/index.html
@@ -51,6 +51,16 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat occupied"></div>
+      <div class="seat"></div>
+      <div class="seat"></div>
+    </div>
+    <div class="row">
+      <div class="seat"></div>
+      <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat occupied"></div>
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
@@ -69,19 +79,9 @@
     <div class="row">
       <div class="seat"></div>
       <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-    </div>
-    <div class="row">
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat occupied"></div>
+      <div class="seat occupied"></div>
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
@@ -91,8 +91,8 @@
       <div class="seat"></div>
       <div class="seat"></div>
       <div class="seat"></div>
-      <div class="seat"></div>
-      <div class="seat"></div>
+      <div class="seat occupied"></div>
+      <div class="seat occupied"></div>
       <div class="seat"></div>
       <div class="seat"></div>
     </div>
