--- a/06.Landing-Page/index.html
+++ b/06.Landing-Page/index.html
@@ -93,15 +93,26 @@
           <form action="" class="modal-form">
             <div>
               <label for="name">Name</label>
-              <input type="text" id="name" placeholder="Enter name" />
+              <input
+                class="form-input"
+                type="text"
+                id="name"
+                placeholder="Enter name"
+              />
             </div>
             <div>
               <label for="email">Email</label>
-              <input type="email" id="email" placeholder="Enter email" />
+              <input
+                class="form-input"
+                type="email"
+                id="email"
+                placeholder="Enter email"
+              />
             </div>
             <div>
               <label for="password">Password</label>
               <input
+                class="form-input"
                 type="password"
                 id="password"
                 placeholder="Enter password"
@@ -110,6 +121,7 @@
             <div>
               <label for="password2">Confirm Password</label>
               <input
+                class="form-input"
                 type="password"
                 id="password2"
                 placeholder="Enter password2"
