--- a/07.Hangman-Game/index.html
+++ b/07.Hangman-Game/index.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Hangman</h1>
     <p>Find the hidden word - Enter a letter</p>
+
+    <!-- Game container -->
     <div class="game-container">
       <svg height="250" width="200" class="figure-container">
         <!-- Rod -->
@@ -28,6 +30,34 @@
         <line x1="140" y1="150" x2="120" y2="185" class="figure-part" />
         <line x1="140" y1="150" x2="160" y2="185" class="figure-part" />
       </svg>
+
+      <div class="wrong-letters-container">
+        <div id="wrong-letters">
+          <p>Wrong</p>
+          <span>a,b,c,d</span>
+        </div>
+      </div>
+
+      <div class="word" id="word">
+        <div class="letter">a</div>
+        <div class="letter">b</div>
+        <div class="letter">c</div>
+        <div class="letter">d</div>
+        <div class="letter">e</div>
+      </div>
+    </div>
+
+    <!-- Container for final message -->
+    <div class="popup-container" id="popup-container">
+      <div class="popup">
+        <h2 id="final-message">You have won</h2>
+        <button id="play-button">Play Again</button>
+      </div>
+    </div>
+
+    <!-- Notification -->
+    <div class="notification-container" id="notification-container">
+      <p>You have already entered this letter</p>
     </div>
     <script src="script.js"></script>
   </body>
