--- a/08.Meals-Finder/index.html
+++ b/08.Meals-Finder/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <h1>Meal Finder</h1>
-      <div class="flex">
+      <div class="flex margin-bottom-md">
         <form action="" class="flex" id="submit">
           <input type="text" id="search" placeholder="Search for meals" />
           <button type="submit" class="search-btn">
