08.Add spin loading

--- a/08.Meals-Finder/index.html
+++ b/08.Meals-Finder/index.html
@@ -32,6 +32,11 @@
       <div id="meals" class="meals"></div>
       <div id="single-meal"></div>
     </div>
+
+    <!-- Spin loading container -->
+    <div class="spin-container hide" id="spin-container">
+      <div class="lds-heart"><div></div></div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
