09.Add and delete transaction

--- a/09.Expense-Tracker/index.html
+++ b/09.Expense-Tracker/index.html
@@ -35,11 +35,21 @@
       <form id="form">
         <div class="form-control">
           <label for="text">Text</label>
-          <input type="text" id="text" placeholder="Enter text..." />
+          <input
+            type="text"
+            id="text"
+            autocomplete="off"
+            placeholder="Enter text..."
+          />
         </div>
         <div class="form-control">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" placeholder="Enter amount..." />
+          <input
+            type="number"
+            id="amount"
+            autocomplete="off"
+            placeholder="Enter amount..."
+          />
         </div>
         <button type="submit" class="btn">Add transaction</button>
       </form>
