09.Add form validator

--- a/09.Expense-Tracker/index.html
+++ b/09.Expense-Tracker/index.html
@@ -41,6 +41,7 @@
             autocomplete="off"
             placeholder="Enter text..."
           />
+          <small id="error-text" class="error">Error</small>
         </div>
         <div class="form-control">
           <label for="amount">Amount</label>
@@ -50,6 +51,7 @@
             autocomplete="off"
             placeholder="Enter amount..."
           />
+          <small id="error-amount" class="error">Error</small>
         </div>
         <button type="submit" class="btn">Add transaction</button>
       </form>
