--- a/09.Expense-Tracker/index.html
+++ b/09.Expense-Tracker/index.html
@@ -4,56 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Expense Tracker</title>
+    <title>Quản lý tài chính</title>
   </head>
   <body>
-    <h2>Expense Tracker</h2>
+    <h2>Quản lý tài chính</h2>
 
     <div class="container">
-      <h4>Your balance</h4>
-      <h1 id="balance">$0.00</h1>
+      <h4>Ngân sách khả dụng</h4>
+      <h1 id="balance"></h1>
 
       <div class="inc-exp-container">
         <div>
-          <h4>Income</h4>
-          <p id="money-plus" class="money plus">+$0.00</p>
+          <h4>Thu nhập</h4>
+          <p id="money-plus" class="money plus"></p>
         </div>
         <div>
-          <h4>Expense</h4>
-          <p id="money-minus" class="money minus">-$0.00</p>
+          <h4>Chi tiêu</h4>
+          <p id="money-minus" class="money minus"></p>
         </div>
       </div>
 
-      <h3>History</h3>
-      <ul id="list" class="list">
-        <!-- <li class="minus">
-          Cash <span>-$400</span><button class="delete-btn">x</button>
-        </li> -->
-      </ul>
+      <h3>Lịch sử giao dịch</h3>
+      <ul id="list" class="list"></ul>
 
-      <h3>Add new transaction</h3>
+      <h3>Thêm 1 giao dịch mới</h3>
       <form id="form">
         <div class="form-control">
-          <label for="text">Text</label>
+          <label for="text">Mô tả</label>
           <input
             type="text"
             id="text"
             autocomplete="off"
-            placeholder="Enter text..."
+            placeholder="Nhập mô tả..."
           />
-          <small id="error-text" class="error">Error</small>
+          <small id="error-text" class="error"></small>
         </div>
         <div class="form-control">
-          <label for="amount">Amount</label>
+          <label for="amount">Lượng tiền</label>
           <input
             type="number"
             id="amount"
             autocomplete="off"
-            placeholder="Enter amount..."
+            placeholder="Số lượng"
           />
-          <small id="error-amount" class="error">Error</small>
+          <small id="error-amount" class="error"></small>
         </div>
-        <button type="submit" class="btn">Add transaction</button>
+        <button type="submit" class="btn">Thêm giao dịch</button>
       </form>
     </div>
 
