09.Cập nhật giao diện

--- a/09.Expense-Tracker/index.html
+++ b/09.Expense-Tracker/index.html
@@ -10,7 +10,7 @@
     <h2>Quản lý tài chính</h2>
 
     <div class="container">
-      <h4>Ngân sách khả dụng</h4>
+      <h4>Ngân sách khả dụng (Đơn vị: nghìn đồng)</h4>
       <h1 id="balance"></h1>
 
       <div class="inc-exp-container">
