--- a/10.Music-Player/index.html
+++ b/10.Music-Player/index.html
@@ -13,35 +13,53 @@
     <title>Music Player</title>
   </head>
   <body>
-    <h1>Music Player</h1>
+    <div class="container">
+      <div class="search-container">
+        <form action="" class="form" id="form">
+          <input
+            type="text"
+            id="search"
+            autocomplete="off"
+            placeholder="Nhập tên bài hát"
+          />
+          <button type="submit" class="btn">
+            <i class="fas fa-search"></i>
+          </button>
+        </form>
+      </div>
 
-    <div class="music-container" id="music-container">
-      <div class="music-info">
-        <h4 id="title">Ukelele</h4>
-        <div class="progress-container" id="progress-container">
-          <div class="progress" id="progress"></div>
+      <div class="music-container" id="music-container">
+        <div class="music-info">
+          <h4 id="title">Ukelele</h4>
+          <div class="progress-container" id="progress-container">
+            <div class="progress" id="progress"></div>
+          </div>
+        </div>
+
+        <audio src="/music/ukulele.mp3" id="audio"></audio>
+
+        <div class="img-container">
+          <img src="/images/ukulele.jpg" alt="Music cover" id="cover" />
+        </div>
+
+        <div class="navigation">
+          <button id="prev" class="action-btn">
+            <i class="fas fa-backward"></i>
+          </button>
+          <button id="play" class="action-btn action-btn-big">
+            <i class="fas fa-play"></i>
+          </button>
+          <button id="next" class="action-btn">
+            <i class="fas fa-forward"></i>
+          </button>
         </div>
       </div>
 
-      <audio src="/music/ukulele.mp3" id="audio"></audio>
-
-      <div class="img-container">
-        <img src="/images/ukulele.jpg" alt="Music cover" id="cover" />
-      </div>
-
-      <div class="navigation">
-        <button id="prev" class="action-btn">
-          <i class="fas fa-backward"></i>
-        </button>
-        <button id="play" class="action-btn action-btn-big">
-          <i class="fas fa-play"></i>
-        </button>
-        <button id="next" class="action-btn">
-          <i class="fas fa-forward"></i>
-        </button>
+      <div class="list-container">
+        <ul id="list" class="list"></ul>
       </div>
     </div>
-
+    <script src="utils.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
