--- a/10.Music-Player/index.html
+++ b/10.Music-Player/index.html
@@ -56,7 +56,40 @@
       </div>
 
       <div class="list-container">
-        <ul id="list" class="list"></ul>
+        <ul id="list" class="list">
+          <li class="song">
+            <div class="song-order"><span>1</span></div>
+            <div class="song-photo">
+              <img
+                src="https://photo-resize-zmp3.zadn.vn/w480_r1x1_jpeg/covers/b/1/b1c839bd85e6081614cf770278b8f782_1387164001.jpg"
+                alt=""
+              />
+            </div>
+            <div class="song-info">
+              <div class="title">
+                <a href="javascript:;">Em cua ngay hom qua</a>
+              </div>
+              <div class="artist"><span>Son Tung MTP</span></div>
+            </div>
+            <div class="song-duration"><span>03:11</span></div>
+          </li>
+          <li class="song">
+            <div class="song-order"><span>1</span></div>
+            <div class="song-photo">
+              <img
+                src="https://photo-resize-zmp3.zadn.vn/w480_r1x1_jpeg/covers/b/1/b1c839bd85e6081614cf770278b8f782_1387164001.jpg"
+                alt=""
+              />
+            </div>
+            <div class="song-info">
+              <div class="title">
+                <a href="javascript:;">Em cua ngay hom qua</a>
+              </div>
+              <div class="artist"><span>Son Tung MTP</span></div>
+            </div>
+            <div class="song-duration"><span>03:11</span></div>
+          </li>
+        </ul>
       </div>
     </div>
     <script src="utils.js"></script>
