--- a/10.Music-Player/index.html
+++ b/10.Music-Player/index.html
@@ -59,6 +59,11 @@
         <ul id="list" class="list"></ul>
       </div>
     </div>
+
+    <div class="spin-load-container" id="spin-load-container">
+      <div class="lds-heart"><div></div></div>
+    </div>
+
     <script src="utils.js"></script>
     <script src="template.js"></script>
     <script src="storage.js"></script>
