--- a/10.Music-Player/index.html
+++ b/10.Music-Player/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Music Player</title>
   </head>
+
   <body>
     <div class="container">
       <div class="search-container">
@@ -21,6 +22,9 @@
             id="search"
             autocomplete="off"
             placeholder="Nhập tên bài hát"
+            autocorrect="off"
+            autocapitalize="off"
+            spellcheck="false"
           />
           <button type="submit" class="btn">
             <i class="fas fa-search"></i>
@@ -61,7 +65,9 @@
     </div>
 
     <div class="spin-load-container" id="spin-load-container">
-      <div class="lds-heart"><div></div></div>
+      <div class="lds-heart">
+        <div></div>
+      </div>
     </div>
 
     <script src="utils.js"></script>
