10.Show error notification

--- a/10.Music-Player/index.html
+++ b/10.Music-Player/index.html
@@ -70,6 +70,10 @@
       </div>
     </div>
 
+    <div class="error-container">
+      <span id="error-message">Error</span>
+    </div>
+
     <script src="utils.js"></script>
     <script src="template.js"></script>
     <script src="storage.js"></script>
