--- a/10.Music-Player/index.html
+++ b/10.Music-Player/index.html
@@ -30,6 +30,7 @@
             <i class="fas fa-search"></i>
           </button>
         </form>
+        <div id="suggest" class="suggest"></div>
       </div>
 
       <div class="music-container" id="music-container">
