--- a/12.Typing-Game/index.html
+++ b/12.Typing-Game/index.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="container">
-    <h2>Speed Type</h2>
+    <h2>Speed Typer</h2>
     <small>Type the following:</small>
 
     <h1 id="word"></h1>
