--- a/10.Music-Player/index.html
+++ b/10.Music-Player/index.html
@@ -57,6 +57,9 @@
           <button id="next" class="action-btn">
             <i class="fas fa-forward"></i>
           </button>
+          <button id="loop" class="action-btn">
+            <i class="fas fa-undo"></i>
+          </button>
         </div>
       </div>
 
