Add 2 project to home page

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
       <li><a href="/08.Meals-Finder/index.html">08. Meals Finder</a></li>
       <li><a href="/09.Expense-Tracker/index.html">09. Expense Tracker</a></li>
       <li><a href="/10.Music-Player/index.html">10. Custom Music Player</a></li>
+      <li>
+        <a href="/11.Infinite-Scroll-Page/index.html"
+          >11. Infinite Scroll Page</a
+        >
+      </li>
+      <li><a href="/12.Typing-Game/index.html">Typer Game</a></li>
     </ul>
   </body>
 </html>
