--- a/14.Memory-Card/index.html
+++ b/14.Memory-Card/index.html
@@ -4,11 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=7">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+  <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" 
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" 
+    crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css" media="all">
   <title>Memory Card</title>
 </head>
 <body>
+
   <button id="clear" class="clear btn">
     <i class="fas fa-trash"></i> Clear Cards
   </button>
@@ -78,7 +83,8 @@
 
     <div class="form-group">
       <label for="question">Question</label>
-      <textarea id="question" placeholder="Enter question..."></textarea>
+      <textarea id="question" placeholder="Enter question...">
+      </textarea>
     </div>
 
     <div class="form-group">
